--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         </tbody>
     </table>
 </body>
-<script>
-     let t1 = document.getElementById('t1');
-        let c1 = JSON.parse(localStorage.getItem('aksh'));
-          if (c1.length != 0){
+<scrlet t1 = document.getElementById('t1');
+    let c1 = JSON.parse(localStorage.getItem('aksh'));
 
-        let k = ""
+    let k = ""
+    if (c1 != null){
+
         for (let i = 0; i < c1.length; i++) {
             k += ` <tr>
                             <th scope="row">${i + 1}</th>
@@ -50,8 +50,8 @@
                             <td>${c1[i][1]}</td>
                         </tr>`;
         }
-        t1.innerHTML = k;
     }
+    t1.innerHTML = k;
     // let c1 = JSON.parse(localStorage.getItem('aksh'));
     document.getElementById('su1').addEventListener('click', (e) => {
         e.preventDefault();
