--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         </tbody>
     </table>
 </body>
-<scrlet t1 = document.getElementById('t1');
+<script>
+    let t1 = document.getElementById('t1');
     let c1 = JSON.parse(localStorage.getItem('aksh'));
 
     let k = ""
